[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/1-bit 8x8 roguelike asset pack.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Resources/FontStyle2.tres" type="DynamicFont" id=3]
[ext_resource path="res://Resources/FontStyle2SmallerFontSize.tres" type="DynamicFont" id=4]
[ext_resource path="res://Resources/FontStyle2LargerFontSize.tres" type="DynamicFont" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Player1Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteShade:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteShade:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 7 )

[node name="Player" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 96.0, 5.0 ]
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6
frame = 1
region_enabled = true
region_rect = Rect2( 8, 24, 48, 8 )

[node name="SpriteShade" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.498039 )
texture = ExtResource( 1 )
hframes = 6
frame = 1
region_enabled = true
region_rect = Rect2( 8, 24, 48, 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Player1Idle"
anims/Player1Idle = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="P1TurnCount" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -21.0
margin_right = 49.0
margin_bottom = -11.0
custom_fonts/font = ExtResource( 3 )
text = "3 moves left"

[node name="Shade" type="Label" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 0.435294 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -21.0
margin_right = 96.0
margin_bottom = -11.0
custom_fonts/font = ExtResource( 3 )
text = "3 moves left"

[node name="PlayerLabel" type="Label" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.498039 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -11.0
margin_right = 29.0
margin_bottom = -5.0
custom_fonts/font = ExtResource( 4 )
text = "Player 1"

[node name="SkipTurn" type="Label" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0.498039 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -28.0
margin_right = 96.0
margin_bottom = -22.0
custom_fonts/font = ExtResource( 4 )
text = "Press \"Space\" to skip turn"

[node name="TurnTimeLeft" type="Label" parent="CanvasLayer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 5.0
margin_top = 28.0
margin_right = 63.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 5 )
text = "10:00"
valign = 1

[node name="DetectPowerup" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPowerup"]
shape = SubResource( 3 )

[node name="Player1TurnTimer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="Player1TurnTimer" to="." method="_on_Player1TurnTimer_timeout"]
